--- a/style.css
+++ b/style.css
@@ -130,10 +130,21 @@ body {
 }
 .galleryBox__section {
     position: relative;
-    min-width: 45%;
-    width: 45%;
+    min-width: 30%;
+    width: 30%;
     height: 80vh;
-    margin-bottom: 80px;
+    margin-bottom: 50px;
+    opacity: 0.6;
+    transition: 0.5s;
+    overflow: hidden;
+    filter: grayscale(100%);
+}
+.galleryBox__section:hover {
+    opacity: 1;
+    width: 40%;
+    min-width: 40%;
+    filter: grayscale(50%);
+    /* transform: translateY(-20px); */
 }
 .galleryBox__section img {
     position: absolute;
@@ -165,5 +176,12 @@ body {
     .galleryBox__section {
         min-width: 100%;
         width: 100%;
+        min-height: 100%;
+        height: 65vh;
+        opacity: 0.8;
+    }
+    .galleryBox__section:hover {
+        width: 100%;
+        height: 55vh;
     }
 }
