--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     display: flex;
     width: 100%;
     background: #111;
+    user-select: none;
 }
 ::-webkit-scrollbar {
     width: 0px;
@@ -36,6 +37,16 @@ body {
     padding: 0 20px;
     transition: 0.5s;
     z-index: 10;
+}
+.header::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 10%;
+    background: linear-gradient(to top, #111, transparent);
+    opacity: 0.7;
 }
 .header img {
     position: absolute;
@@ -178,9 +189,7 @@ body {
 .galleryBox__section:hover {
     opacity: 1;
     width: 40%;
-    min-width: 40%;
     filter: grayscale(50%);
-    /* transform: translateY(-20px); */
 }
 .galleryBox__section img {
     position: absolute;
@@ -190,8 +199,12 @@ body {
     border: 5px solid #111;
     border-radius: 5px;
 }
-
 @media (max-width: 600px) {
+    .header::before {
+        display: none;
+        visibility: hidden;
+        opacity: 0;
+    }
     .header .nav {
         visibility: hidden;
         opacity: 0;
