--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
     background: #fff;
     padding: 0 20px;
     transition: 0.5s;
+    box-shadow: 0 0 0 2px #111;
     z-index: 10;
 }
 .header::before {
