--- a/style.css
+++ b/style.css
@@ -232,6 +232,7 @@ body {
         min-height: 100%;
         height: 65vh;
         opacity: 0.8;
+        filter: grayscale(50%);
     }
     .galleryBox__section:hover {
         width: 100%;
