--- a/login.css
+++ b/login.css
@@ -18,6 +18,7 @@
     width: 100%;
     height: 100vh;
     background: transparent;
+    -webkit-backdrop-filter: blur(20px);
     backdrop-filter: blur(20px);
     z-index: 100;
     position: fixed;
