--- a/login.css
+++ b/login.css
@@ -1,7 +1,7 @@
 .userStart {
     position: relative;
-    width: 800px;
-    height: 500px;
+    width: 50%;
+    height: 65%;
     background: #fff;
     box-shadow: 0 15px 50px rgba(0,0,0,0.1);
     overflow: hidden;
