--- a/style.css
+++ b/style.css
@@ -454,6 +454,7 @@ body {
 @media (max-width: 600px) {
     .header {
         opacity: 1;
+        height: 80px;
     }
     .header::before {
         display: none;
