--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
     position: fixed;
     justify-content: space-between;
     width: 100%;
-    height: 10%;
+    height: 100px;
     align-items: center;
     background: #111;
     padding: 0 20px;
@@ -221,6 +221,7 @@ body {
     filter: invert(0);
     z-index: 0;
     opacity: 0.9;
+    user-select: none;
 }
 .fixedDiv .fixedBg {
     position: absolute;
@@ -231,6 +232,7 @@ body {
     object-fit: cover;
     filter: grayscale(100%);
     opacity: 1;
+    user-select: none;
 }
 .fixedDiv .fixedBg:nth-child(2) {
     mix-blend-mode: multiply;
@@ -312,6 +314,9 @@ body {
     position: relative;
     min-width: 30%;
     width: 30%;
+    max-width: 50%;
+    display: flex;
+    flex-wrap: wrap;
     height: 80vh;
     margin-bottom: 50px;
     opacity: 0.7;
@@ -501,8 +506,7 @@ body {
     .galleryBox__section {
         min-width: 100%;
         width: 100%;
-        min-height: 100%;
-        height: 65vh;
+        height: 80vh;
         opacity: 0.8;
         filter: grayscale(50%);
     }
@@ -538,5 +542,33 @@ body {
     .footer__container p {
         opacity: 0.8;
         font-size: 0.5em;
+    }
+}
+@media (max-width: 1000px) {
+    .header {
+        height: 80px;
+    }
+    .galleryBox__section {
+        width: 50%;
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .galleryBox__section:hover {
+        width: 100%;
+    }
+    .content {
+        top: 10px;
+    }
+    .content h2 {
+        font-size: 1.5em;
+        animation: action 12s steps(17) infinite;
+    }
+    @keyframes action {
+        0%, 90%, 100% {
+            width: 0;
+        }
+        30%, 60% {
+            width: 300px;
+        }
     }
 }
