--- a/style.css
+++ b/style.css
@@ -312,9 +312,9 @@ body {
 }
 .active-btn__menu {
     position: fixed;
-    top: 50%;
+    bottom: 0;
     left: 25px;
-    transform: translateY(-50%) rotate(90deg);
+    transform: rotate(90deg) scale(-1, 1);
     background: none;
     border: none;
     font-size: 3em;
@@ -471,6 +471,7 @@ body {
     color: #fff;
     font-size: 1.5em;
     padding: 0 40px;
+    text-transform: none;
 }
 .active-menu .img-tag {
     font-size: 3em;
@@ -727,10 +728,9 @@ body {
     .active-btn__menu {
         font-size: 2em;
         left: 10px;
-        top: 100px;
+        bottom: 0;
     }
     .active-btn__menu.active {
-        top: 80px;
         left: 5px;
     }
     .menu__page-img-box:nth-child(1) {
