--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
     width: 100%;
     background: #111;
     user-select: none;
+    scroll-behavior: smooth;
 }
 ::-webkit-scrollbar {
     width: 0px;
@@ -402,13 +403,13 @@ body {
 .galleryBox__section {
     position: relative;
     min-width: 30%;
-    width: 30%;
+    width: 33%;
     max-width: 50%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: flex-end;
-    height: 80vh;
+    height: 100%;
     margin-bottom: 50px;
     opacity: 0.7;
     transition: 0.5s;
@@ -416,11 +417,9 @@ body {
 }
 .galleryBox__section:hover {
     opacity: 1;
-    width: 40%;
     filter: grayscale(50%);
 }
 .galleryBox__section img {
-    position: absolute;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -625,6 +624,7 @@ body {
     transition: 0.5s; 
     outline: none;
     z-index: 10;
+    scroll-behavior: smooth;
 }
   #arrowTop::before {
     content: '▲';
@@ -769,9 +769,9 @@ body {
     .galleryBox__section {
         min-width: 100%;
         width: 100%;
-        height: 80vh;
+        height: 100%;
         opacity: 0.8;
-        filter: grayscale(50%);
+        filter: grayscale(75%);
     }
     .galleryBox__section:hover {
         width: 100%;
