--- a/style.css
+++ b/style.css
@@ -431,16 +431,15 @@ body {
     height: 50px;
     background: #000;
     z-index: 1;
-    overflow: hidden;
+    transition: 0.5s;
 }
 .active-menu {
     width: 100%;
     height: 100%;
-    position: relative;
+    position: absolute;
     background: #000;
     transition: 0.5s;
     color: #fff;
-    overflow: hidden;
 }
 .info-box .info-box__disabled {
     display: flex;
