--- a/style.css
+++ b/style.css
@@ -329,13 +329,8 @@ body {
     align-items: flex-end;
     height: 100%;
     margin-bottom: 50px;
-    opacity: 0.7;
     transition: 0.5s;
-    filter: grayscale(75%);
-}
-.galleryBox__section:hover {
-    opacity: 1;
-    filter: grayscale(25%);
+    filter: grayscale(25%) brightness(90%);
 }
 .galleryBox__section img {
     width: 100%;
@@ -506,7 +501,6 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    opacity: 0.2;
     z-index: 0;
 }
 .footer__container {
@@ -542,7 +536,6 @@ body {
 }
 .footer__container p {
     color: #fff;
-    opacity: 0.2;
     font-size: 0.75em;
     text-align: center;
 }
@@ -598,7 +591,6 @@ body {
         min-width: 100%;
         width: 100%;
         height: 100%;
-        opacity: 0.8;
         filter: grayscale(25%);
     }
     .galleryBox__section:hover {
